RESOLVED FIXED299898
Trusted Types attribute processing order is wrong
https://bugs.webkit.org/show_bug.cgi?id=299898
Summary Trusted Types attribute processing order is wrong
Luke Warlow
Reported 2025-09-30 13:44:34 PDT
The spec has been updated to better handle certain edge case scenarios caused by doing odd things within a Trusted Types default policy callback. This has lead to some re-ordering of steps in DOM methods for updating attribute values. Spec PR: https://github.com/whatwg/dom/pull/1268
Attachments
Luke Warlow
Comment 1 2025-09-30 14:47:28 PDT
Radar WebKit Bug Importer
Comment 2 2025-10-07 13:45:10 PDT
EWS
Comment 3 2025-10-28 18:49:18 PDT
Committed 302272@main (8c427733d7f7): <https://commits.webkit.org/302272@main> Reviewed commits have been landed. Closing PR #51594 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.