Trusted Types attribute processing order is wrong https://bugs.webkit.org/show_bug.cgi?id=299898

Reviewed by Darin Adler.

This patch moves the trusted types value processing earlier in some of the DOM attribute setting algorithms.

This ensures that script execution caused by the default policy can't break expectations in the code.

* LayoutTests/imported/w3c/web-platform-tests/trusted-types/set-attributes-mutations-in-callback.tentative-expected.txt:
* Source/WebCore/dom/Attr.cpp:
(WebCore::Attr::setValue):
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::setAttribute):
(WebCore::Element::setAttributeNode):
(WebCore::Element::setAttributeNodeNS):
(WebCore::Element::setAttributeNS):
(WebCore::trustedTypesCompliantAttributeValue): Deleted.
* Source/WebCore/dom/Element.h:
* Source/WebCore/dom/TrustedType.cpp:
(WebCore::trustedTypesCompliantAttributeValue):
* Source/WebCore/dom/TrustedType.h:

Canonical link: https://commits.webkit.org/302272@main